more on bell states

--- a/src/components/bell_states/bell_states_basic.ipynb
+++ b/src/components/bell_states/bell_states_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "84e35149-42f7-4c4f-8e3c-41f40270d70d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "b0e29dbf-e229-4b39-88a3-491268749c89",
    "metadata": {},
    "outputs": [],
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "1bb8d957-780a-4139-807e-40ad60349252",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x7fd155793850>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x7f9a78a64700>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "59d5cfb4-9aab-4663-bd4b-4b65bfc275c7",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "<Figure size 264.396x144.48 with 1 Axes>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,40 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "44b30994-53a1-4b54-b048-86de283b7a3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qcirc.draw(\"mpl\").savefig(\"bell_states_basics.png\")"
+    "# qcirc.draw(\"mpl\").savefig(\"bell_states_basics.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "3e0d2e16-e741-452f-9582-2c1ae75a44ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: -c: line 0: syntax error near unexpected token `../bell_states_basics.png'\n",
-      "/bin/bash: -c: line 0: `[bell_states_basics](../bell_states_basics.png)'\n"
-     ]
-    }
-   ],
-   "source": [
-    "![bell_states_basics](../bell_states_basics.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30dfcf7e-2a80-4043-b821-e577b090b338",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
